fix(navbar): fix bug of navbar alignment and enlarge logo font

--- a/css/style.css
+++ b/css/style.css
@@ -10249,3 +10249,30 @@ h6,
     .alumni-thumb { width: 100%; }
     .alumni-text { max-width: 100%; }
 }
+
+
+/* ===== Navar Bar Section ===== */
+.navbar {
+    padding-top: 0.45rem !important;
+    padding-bottom: 0.45rem !important;
+}
+.navbar-brand {
+    margin-right: 1.4rem;   /* Spacing between LOGO and menu; adjustable */
+    font-size: 2.8rem;
+    letter-spacing: 0.05em;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+}
+.navbar-nav .nav-link {
+    font-size: 1.12rem;
+    font-weight: 500;
+    color: #444b67 !important;
+    padding-left: 1.1rem;
+    padding-right: 1.1rem;
+}
+.navbar-nav .nav-link.active,
+.navbar-nav .nav-link:focus,
+.navbar-nav .nav-link:hover {
+    color: #ff8900 !important;
+}
